--- a/12.1/grid2.html
+++ b/12.1/grid2.html
@@ -10,7 +10,7 @@
     .container {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(2, 200px);
+      grid-template-rows: repeat(3, 200px);
       gap: 15px;
 
     }
@@ -27,6 +27,8 @@
 
     .item1 {
       background-color: red;
+      grid-column: 1/3;
+      grid-row: 1/2;
     }
 
     .item2 {
@@ -39,6 +41,10 @@
 
     .item4 {
       background-color: orange;
+      grid-row-start: 1;
+      grid-row-end: 2;
+      grid-column-start: 3;
+      grid-column-end: 4;
     }
 
     .item5 {
@@ -47,6 +53,12 @@
 
     .item6 {
       background-color: hotpink;
+      grid-row: 3/4;
+      /* grid-row-start: 1;
+      grid-row-end: 2; */
+      grid-column: 1/4;
+      /* grid-column-start: 1;
+      grid-column-end: 2; */
     }
   </style>
 </head>
