--- a/Mardi Gras End Project/html/index.html
+++ b/Mardi Gras End Project/html/index.html
@@ -65,7 +65,8 @@
       </div>
     </header>
     <main>
-      <div class="row">
+      <div class="row crousel_timer">
+        <p id="demo"></p>
         <div class="phone_Image">
           <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="img-fluid" alt="phone">
         </div>
@@ -136,104 +137,103 @@
         <h2>Sponsors</h2>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="/Mardi Gras End Project/images/parking.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title"> Walk-On's Bistreaux and Bar</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Premium Parking - P402</h5>
+              <p class="card-text">One platform for all your parking needs. Create a seamless experience with the
+                smartest parking management solution for properties, owners and parking operators.</p>
+              <a id="1" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
         <div class="container1">
-          <div class="pop_Up_1">
+          <div class="pop_Up1">
             <div class="close">x</div>
-            <div class="content1">
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"> Walk-On's Bistreaux and Bar</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+            <div class="card" style="width: 18rem;">
+              <img src="/Mardi Gras End Project/images/parking.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Premium Parking - P402</h5>
+                <p class="card-text">One platform for all your parking needs. Create a seamless experience with the
+                  smartest parking management solution for properties, owners and parking operators.</p>
+                <a id="1" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
           </div>
         </div>
-
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="/Mardi Gras End Project/images/hotel.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Sheraton New Orleans Hotel</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text"> Book your stay at Sheraton New Orleans Hotel to enjoy thoughtful amenities,
+                exceptional dining, a rooftop pool and a prime downtown location.</p>
+              <a id="2" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="container1">
+          <div class="pop_Up1">
+            <div class="close">x</div>
+            <div class="content">
+              <h2>Black Friday SALE!</h2>
+              <p>60% off all Nike shoes</p>
+              <a href="#">Enter Now</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="/Mardi Gras End Project/images/aceHotel.svg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Ace Hotel New Orleans</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">A stone’s throw from the French Quarter, in the soul of the Deep South.</p>
+              <a id="3" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="/Mardi Gras End Project/images/ritz-carlton-primary-black.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">The Ritz-Carlton, New Orleans</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">Within a Historic Beaux Arts Building in New Orleans’ French Quarter, a Hotel Offers
+                Luxury with a Local Touch</p>
+              <a id="4" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
       </div>
+
       <div class="row sponsors">
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Premium Parking - P402</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="/Mardi Gras End Project/images/lcm.svg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Louisiana Children's Museum</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">When you make a child's potential visible, wonderful things happen.</p>
+              <a id="5" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="/Mardi Gras End Project/images/mod.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Museum of Death</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">The Museum of Death is observing the city of New Orleans' mask and vaccine mandate.
+                Guests will be asked to show an ID along with their vaccine card or negative Covid test to gain entry.
+                Thank you and have a great life!</p>
+              <a id="6" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="/Mardi Gras End Project/images/walkons.svg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Walk-On's Bistreaux and Bar</h5>
+              <p class="card-text">Game Day with a Taste of Louisiana.</p>
+              <a id="7" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
@@ -245,7 +245,7 @@
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                 card's
                 content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a id="8" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
@@ -283,7 +283,7 @@
           Copyright © 1996-2022 MardiGrasNewOrleans.com
         </p>
       </div>
-    </footer>oter>
+    </footer>
   </div>
   </div>
 
@@ -291,18 +291,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
-  <script>
-    const button = document.querySelector('a');
-    const container = document.querySelector('.container1');
-    const close = document.querySelector('.close');
-
-    button.addEventListener('click', () => {
-      container.style.display = 'block';
-    });
-    close.addEventListener('click', () => {
-      container.style.display = 'none';
-    });
-  </script>
+  <script src="/Mardi Gras End Project/js/index.js"></script>
 </body>
 
 </html>
