--- a/Mardi Gras End Project/html/index.html
+++ b/Mardi Gras End Project/html/index.html
@@ -64,6 +64,7 @@
         </nav>
       </div>
     </header>
+
     <main>
       <div class="row crousel_timer">
         <p id="demo"></p>
@@ -133,30 +134,28 @@
         </div>
       </div>
 
-      <div class="row sponsors">
+      <div class="row sponsors" id="sponsors">
         <h2>Sponsors</h2>
         <div class="col">
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/parking.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Premium Parking - P402</h5>
-              <p class="card-text">One platform for all your parking needs. Create a seamless experience with the
-                smartest parking management solution for properties, owners and parking operators.</p>
-              <a id="1" class="btn btn-primary">Go somewhere</a>
+              <a href="#popup1" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
-        <div class="container1">
-          <div class="pop_Up1">
-            <div class="close">x</div>
-            <div class="card" style="width: 18rem;">
-              <img src="/Mardi Gras End Project/images/parking.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Premium Parking - P402</h5>
-                <p class="card-text">One platform for all your parking needs. Create a seamless experience with the
-                  smartest parking management solution for properties, owners and parking operators.</p>
-                <a id="1" class="btn btn-primary">Go somewhere</a>
-              </div>
+        <div id="popup1" class="overlay">
+          <div class="popup">
+            <h2>Premium Parking - P402</h2>
+            <a class="close" href="#sponsors">&times;</a>
+            <div class="content">
+              <p>One platform for all your parking needs. <br> Create a seamless experience with the
+                smartest parking <br> management solution for properties, owners and parking operators.</p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13827.609358080292!2d-90.0643219!3d29.9534876!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf125c95ac5a402fc!2sPremium%20Parking%20-%20P402!5e0!3m2!1sen!2sil!4v1643905291033!5m2!1sen!2sil"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <br>
+              <a href="https://www.premiumparking.com/P402" target="_blank">Visit Us!</a>
             </div>
           </div>
         </div>
@@ -164,20 +163,25 @@
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/hotel.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Sheraton New Orleans Hotel</h5>
-              <p class="card-text"> Book your stay at Sheraton New Orleans Hotel to enjoy thoughtful amenities,
-                exceptional dining, a rooftop pool and a prime downtown location.</p>
-              <a id="2" class="btn btn-primary">Go somewhere</a>
+              <a href="#popup2" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
-        <div class="container1">
-          <div class="pop_Up1">
-            <div class="close">x</div>
+        <div id="popup2" class="overlay">
+          <div class="popup">
+            <h2>Sheraton New Orleans Hotel</h2>
+            <a class="close" href="#sponsors">&times;</a>
             <div class="content">
-              <h2>Black Friday SALE!</h2>
-              <p>60% off all Nike shoes</p>
-              <a href="#">Enter Now</a>
+              <p>
+                Book your stay at Sheraton New Orleans Hotel <br> to enjoy thoughtful amenities,
+                exceptional dining, <br> a rooftop pool and a prime downtown location.
+              </p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3456.9559519343616!2d-90.06918574056789!3d29.951945593389933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8620a60cdbbc992b%3A0xd5f48b1fa6b43f2f!2sSheraton%20New%20Orleans%2C%20500%20Canal%20St%2C%20New%20Orleans%2C%20LA%2070130%2C%20USA!5e0!3m2!1sen!2sil!4v1643905453513!5m2!1sen!2sil"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <br>
+              <a href="https://www.marriott.com/en-us/hotels/msyis-sheraton-new-orleans-hotel/overview/"
+                target="_blank">Visit Us!</a>
             </div>
           </div>
         </div>
@@ -185,20 +189,44 @@
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/aceHotel.svg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Ace Hotel New Orleans</h5>
-              <p class="card-text">A stone’s throw from the French Quarter, in the soul of the Deep South.</p>
-              <a id="3" class="btn btn-primary">Go somewhere</a>
+              <a href="#popup3" class="btn btn-primary">Go somewhere</a>
             </div>
+          </div>
+        </div>
+        <div id="popup3" class="overlay">
+          <div class="popup">
+            <h2>Ace Hotel New Orleans</h2>
+            <a class="close" href="#sponsors">&times;</a>
+            <div class="content">
+              <p>A stone’s throw from the French Quarter, in the soul of the Deep South.</p>
+            </div>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13828.316444691338!2d-90.0721724!3d29.948403!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x526bd0fd39d09879!2sAce%20Hotel%20New%20Orleans!5e0!3m2!1sen!2sil!4v1643905573664!5m2!1sen!2sil"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <br>
+            <a href="https://acehotel.com/new-orleans/" target="_blank">Visit Us!</a>
           </div>
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/ritz-carlton-primary-black.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">The Ritz-Carlton, New Orleans</h5>
-              <p class="card-text">Within a Historic Beaux Arts Building in New Orleans’ French Quarter, a Hotel Offers
+              <a id="4" href="#popup4" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div id="popup4" class="overlay">
+          <div class="popup">
+            <h2>The Ritz-Carlton, New Orleans</h2>
+            <a class="close" href="#sponsors">&times;</a>
+            <div class="content">
+              <p>Within a Historic Beaux Arts Building in New Orleans’ French Quarter, <br> a Hotel Offers
                 Luxury with a Local Touch</p>
-              <a id="4" class="btn btn-primary">Go somewhere</a>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13827.419196810682!2d-90.0712113!3d29.9548549!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe568a57201320fd4!2sThe%20Ritz-Carlton%2C%20New%20Orleans!5e0!3m2!1sen!2sil!4v1643905673202!5m2!1sen!2sil"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <br>
+              <a href="https://www.ritzcarlton.com/en/hotels/new-orleans" target="_blank">Visit Us!</a>
             </div>
           </div>
         </div>
@@ -209,9 +237,21 @@
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/lcm.svg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Louisiana Children's Museum</h5>
-              <p class="card-text">When you make a child's potential visible, wonderful things happen.</p>
-              <a id="5" class="btn btn-primary">Go somewhere</a>
+              <a id="5" href="#popup5" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div id="popup5" class="overlay">
+          <div class="popup">
+            <h2>Louisiana Children's Museum</h2>
+            <a class="close" href="#sponsors">&times;</a>
+            <div class="content">
+              <p>When you make a child's potential visible, wonderful things happen.</p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13822.550250371609!2d-90.0939806!3d29.9898444!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdab5e1375814c8a7!2sLouisiana%20Children&#39;s%20Museum!5e0!3m2!1sen!2sil!4v1643905897402!5m2!1sen!2sil"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <br>
+              <a href="https://lcm.org/" target="_blank">Visit Us!</a>
             </div>
           </div>
         </div>
@@ -219,11 +259,23 @@
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/mod.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Museum of Death</h5>
-              <p class="card-text">The Museum of Death is observing the city of New Orleans' mask and vaccine mandate.
-                Guests will be asked to show an ID along with their vaccine card or negative Covid test to gain entry.
-                Thank you and have a great life!</p>
-              <a id="6" class="btn btn-primary">Go somewhere</a>
+              <a id="6" href="#popup6" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div id="popup6" class="overlay">
+          <div class="popup">
+            <h2>Museum of Death</h2>
+            <a class="close" href="#sponsors">&times;</a>
+            <div class="content">
+              <p>he Museum of Death is observing the city of New Orleans' mask <br> and vaccine mandate.
+                Guests will be asked to show an ID along <br> with their vaccine card or negative Covid test to gain
+                entry. <br> Thank you and have a great life!</p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13827.282979034206!2d-90.0697115!3d29.9558343!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9e023a6d8578ffb1!2sMuseum%20of%20Death%20New%20Orleans!5e0!3m2!1sen!2sil!4v1643906081719!5m2!1sen!2sil"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <br>
+              <a href="http://www.museumofdeath.net/" target="_blank">Visit Us!</a>
             </div>
           </div>
         </div>
@@ -231,25 +283,54 @@
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/walkons.svg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title"> Walk-On's Bistreaux and Bar</h5>
-              <p class="card-text">Game Day with a Taste of Louisiana.</p>
-              <a id="7" class="btn btn-primary">Go somewhere</a>
+              <a id="7" href="#popup7" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div id="popup7" class="overlay">
+          <div class="popup">
+            <h2>Walk-On's Bistreaux and Bar</h2>
+            <a class="close" href="#sponsors">&times;</a>
+            <div class="content">
+              <p>Game Day with a Taste of Louisiana.</p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13827.988113389956!2d-90.0747403!3d29.9507641!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1ca853ada288eb0d!2sWalk-On&#39;s%20Sports%20Bistreaux%20-%20New%20Orleans!5e0!3m2!1sen!2sil!4v1643906313768!5m2!1sen!2sil"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <br>
+              <a href="https://walk-ons.com/" target="_blank">Visit Us!</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="/Mardi Gras End Project/images/hunted_Museum.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Haunted Museum</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's
-                content.</p>
-              <a id="8" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title"></h5>
+              <p class="card-text"></p>
+              <a id="8" href="#popup8" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div id="popup8" class="overlay">
+          <div class="popup">
+            <h2>Haunted Museum</h2>
+            <a class="close" href="#sponsors">&times;</a>
+            <div class="content">
+              <p>Wander through Paranormal displays and come spirit shop in the Voodoo <br> Pharmacy to get your
+                personal
+                metaphysical prescription filled! Explore <br> the voodoo occult Paranormal Haunted museum & hear the
+                haunted <br>
+                history behind New Orleans Ghosts on your visit. Museum tours by day ghost hunts by night!</p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13826.461831567429!2d-90.06703!3d29.9617377!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x717c4323660dc714!2sBloody%20Mary&#39;s%20Tours%2C%20Haunted%20Museum%20%26%20Voodoo%20Shop!5e0!3m2!1sen!2sil!4v1643906446650!5m2!1sen!2sil"
+                width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <br>
+              <a href="https://www.bloodymarystours.com/hauntedmuseum.html" target="_blank">Visit Us!</a>
             </div>
           </div>
         </div>
       </div>
+
       <div class="row">
         <h2>Small Explanation</h2>
         <p>
@@ -265,6 +346,7 @@
         </p>
       </div>
     </main>
+
     <footer>
       <div class="footer_Break"></div>
       <div class="row online">
@@ -284,7 +366,6 @@
         </p>
       </div>
     </footer>
-  </div>
   </div>
 
 
