--- a/Mardi Gras End Project/html/index.html
+++ b/Mardi Gras End Project/html/index.html
@@ -22,11 +22,22 @@
 
   <div class="container">
     <header>
-      <div class="main_Logo">
-        <div class="row logo-height">
-          <img src="/Mardi Gras End Project/images/Logo.png" alt="Logo">
+      <div class="logo_And_Things">
+        <div class="weather">
+          <!-- weather widget start --><a target="_blank" href="https://www.booked.net/weather/new-orleans-18131"><img
+              src="https://w.bookcdn.com/weather/picture/1_18131_1_1_137AE9_160_ffffff_333333_08488D_1_ffffff_333333_0_6.png?scode=124&domid=&anc_id=32706"
+              alt="booked.net" /></a><!-- weather widget end -->
         </div>
-        <h1>Mardi Gras</h1>
+        <div class="main_Logo">
+          <div class="row logo-height">
+            <img src="/Mardi Gras End Project/images/Logo.png" alt="Logo">
+          </div>
+          <h1>Mardi Gras</h1>
+        </div>
+        <a href="https://www.nola.com/news/coronavirus/" target="_Blank">
+          <img src="/Mardi Gras End Project/images/Covid-19 - spotlight webpage - external.jpg" alt="covid_19"
+            class="img-fluid">
+        </a>
       </div>
       <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -40,20 +51,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/Mardi Gras End Project/html/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="/Mardi Gras End Project/html/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Media</a>
+                  <a class="nav-link" href="/Mardi Gras End Project/html/media.html">Media</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link">FAQ</a>
+                  <a class="nav-link" href="/Mardi Gras End Project/html/faq.html">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link">Contact</a>
+                  <a class="nav-link" href="/Mardi Gras End Project/html/contact.html">Contact</a>
                 </li>
+              </ul>
               </ul>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -140,7 +152,7 @@
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/parking.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="#popup1" class="btn btn-primary">Go somewhere</a>
+              <a href="#popup1" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -163,7 +175,7 @@
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/hotel.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="#popup2" class="btn btn-primary">Go somewhere</a>
+              <a href="#popup2" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -189,7 +201,7 @@
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/aceHotel.svg" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="#popup3" class="btn btn-primary">Go somewhere</a>
+              <a href="#popup3" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -199,19 +211,19 @@
             <a class="close" href="#sponsors">&times;</a>
             <div class="content">
               <p>A stone’s throw from the French Quarter, in the soul of the Deep South.</p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13828.316444691338!2d-90.0721724!3d29.948403!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x526bd0fd39d09879!2sAce%20Hotel%20New%20Orleans!5e0!3m2!1sen!2sil!4v1643905573664!5m2!1sen!2sil"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <br>
+              <a href="https://acehotel.com/new-orleans/" target="_blank">Visit Us!</a>
             </div>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13828.316444691338!2d-90.0721724!3d29.948403!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x526bd0fd39d09879!2sAce%20Hotel%20New%20Orleans!5e0!3m2!1sen!2sil!4v1643905573664!5m2!1sen!2sil"
-              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            <br>
-            <a href="https://acehotel.com/new-orleans/" target="_blank">Visit Us!</a>
           </div>
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/ritz-carlton-primary-black.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <a id="4" href="#popup4" class="btn btn-primary">Go somewhere</a>
+              <a id="4" href="#popup4" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -235,9 +247,9 @@
       <div class="row sponsors">
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="/Mardi Gras End Project/images/lcm.svg" class="card-img-top" alt="...">
+            <img src="/Mardi Gras End Project/images/better_Lcm.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <a id="5" href="#popup5" class="btn btn-primary">Go somewhere</a>
+              <a id="5" href="#popup5" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -259,7 +271,7 @@
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/mod.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <a id="6" href="#popup6" class="btn btn-primary">Go somewhere</a>
+              <a id="6" href="#popup6" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -268,7 +280,7 @@
             <h2>Museum of Death</h2>
             <a class="close" href="#sponsors">&times;</a>
             <div class="content">
-              <p>he Museum of Death is observing the city of New Orleans' mask <br> and vaccine mandate.
+              <p>The Museum of Death is observing the city of New Orleans' mask <br> and vaccine mandate.
                 Guests will be asked to show an ID along <br> with their vaccine card or negative Covid test to gain
                 entry. <br> Thank you and have a great life!</p>
               <iframe
@@ -283,7 +295,7 @@
           <div class="card" style="width: 18rem;">
             <img src="/Mardi Gras End Project/images/walkons.svg" class="card-img-top" alt="...">
             <div class="card-body">
-              <a id="7" href="#popup7" class="btn btn-primary">Go somewhere</a>
+              <a id="7" href="#popup7" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -307,7 +319,7 @@
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text"></p>
-              <a id="8" href="#popup8" class="btn btn-primary">Go somewhere</a>
+              <a id="8" href="#popup8" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
