--- a/Mardi Gras End Project/html/index.html
+++ b/Mardi Gras End Project/html/index.html
@@ -11,6 +11,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="/Mardi Gras End Project/css/main.css">
   <link rel="stylesheet" href="/Mardi Gras End Project/css/home.css">
+  <link rel="icon" type="image/x-icon" href="/Mardi Gras End Project/images/Logo.png">
   <style>
 
   </style>
@@ -35,14 +36,12 @@
           <h1>Mardi Gras</h1>
         </div>
         <a href="https://www.nola.com/news/coronavirus/" target="_Blank">
-          <img src="/Mardi Gras End Project/images/Covid-19 - spotlight webpage - external.jpg" alt="covid_19"
-            class="img-fluid">
+          <img src="/Mardi Gras End Project/images/Covid-19.png" alt="covid_19" class="img-fluid">
         </a>
       </div>
       <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Mardi Gras</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
@@ -64,6 +63,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/Mardi Gras End Project/html/contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/Mardi Gras End Project/html/quiz.html">HTML CSS Quiz</a>
                 </li>
               </ul>
               </ul>
@@ -348,13 +350,12 @@
         <p>
           What is a Mardi Gras Indian? Where are the best places for families to enjoy the fun? Are there still hotel
           rooms available? Which krewes have the best throws? What are the chances of catching a Zulu coconut?
-
+          <br>
           You'll find the answers to all these questions and more right here at MardiGrasNewOrleans.com – your catch-all
           for everything Carnival. Don your purple, green and gold and join us in New Orleans this March for "The
           Greatest Free Show on Earth."
-
+          <br>
           Mardi Gras 2022 is Tuesday, March 1. We're counting down the minutes.
-
         </p>
       </div>
     </main>
