--- a/Mardi Gras End Project/html/about.html
+++ b/Mardi Gras End Project/html/about.html
@@ -11,6 +11,8 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="/Mardi Gras End Project/css/main.css">
   <link rel="stylesheet" href="/Mardi Gras End Project/css/about.css">
+  <link rel="icon" type="image/x-icon" href="/Mardi Gras End Project/images/Logo.png">
+
   <style>
 
   </style>
@@ -35,14 +37,12 @@
           <h1>Mardi Gras</h1>
         </div>
         <a href="https://www.nola.com/news/coronavirus/" target="_Blank">
-          <img src="/Mardi Gras End Project/images/Covid-19 - spotlight webpage - external.jpg" alt="covid_19"
-            class="img-fluid">
+          <img src="/Mardi Gras End Project/images/Covid-19.png" alt="covid_19" class="img-fluid">
         </a>
       </div>
       <div class="row">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Mardi Gras</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
@@ -65,6 +65,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/Mardi Gras End Project/html/contact.html">Contact</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/Mardi Gras End Project/html/quiz.html">HTML CSS Quiz</a>
+                </li>
               </ul>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -81,7 +84,7 @@
         <div class="item" id="schedule">
           <div id="days">
             <h2>
-              Traditions
+              Schedule
             </h2>
             <h3>
               Tuesday Mar 1 2022
@@ -191,6 +194,7 @@
               </table>
           </div>
         </div>
+        <hr>
         <div class="item" id="history">
           <h2>
             Mardi Gras History
@@ -203,6 +207,7 @@
           <a href="https://www.mardigrasneworleans.com/history/" class="btn btn-primary" target="_blank">Learn More</a>
 
         </div>
+        <hr>
         <div class="item" id="traditions">
           <h2>Traditions</h2>
           <p>
@@ -211,6 +216,7 @@
           <a href="https://www.mardigrasneworleans.com/history/traditions/" class="btn btn-primary"
             target="_blank">Learn More</a>
         </div>
+        <hr>
         <div class="item" id="mayor">
           <h2>
             New Orleans Mayor - LaToya Cantrell
@@ -251,7 +257,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
-  <script src="/Mardi Gras End Project/js/index.js"></script>
 </body>
 
 </html>
