--- a/Mardi Gras End Project/html/about.html
+++ b/Mardi Gras End Project/html/about.html
@@ -9,9 +9,9 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="/Mardi Gras End Project/css/main.css">
-  <link rel="stylesheet" href="/Mardi Gras End Project/css/about.css">
-  <link rel="icon" type="image/x-icon" href="/Mardi Gras End Project/images/Logo.png">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/about.css">
+  <link rel="icon" type="image/x-icon" href="/images/main_Images/Logo.png">
 
   <style>
 
@@ -32,12 +32,12 @@
         </div>
         <div class="main_Logo">
           <div class="row logo-height">
-            <img src="/Mardi Gras End Project/images/Logo.png" alt="Logo">
+            <img src="/images/main_Images/Logo.png" alt="Logo">
           </div>
           <h1>Mardi Gras</h1>
         </div>
         <a href="https://www.nola.com/news/coronavirus/" target="_Blank">
-          <img src="/Mardi Gras End Project/images/Covid-19.png" alt="covid_19" class="img-fluid">
+          <img src="/images/main_Images/Covid-19.png" alt="covid_19" class="img-fluid">
         </a>
       </div>
       <div class="row">
@@ -51,22 +51,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/Mardi Gras End Project/html/index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/html/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/about.html">About</a>
+                  <a class="nav-link" href="/html/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/media.html">Media</a>
+                  <a class="nav-link" href="/html/media.html">Media</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/faq.html">FAQ</a>
+                  <a class="nav-link" href="/html/faq.html">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/contact.html">Contact</a>
+                  <a class="nav-link" href="/contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/quiz.html">HTML CSS Quiz</a>
+                  <a class="nav-link" href="/html/quiz.html">HTML CSS Quiz</a>
                 </li>
               </ul>
               <form class="d-flex">
