--- a/Mardi Gras End Project/html/index.html
+++ b/Mardi Gras End Project/html/index.html
@@ -9,9 +9,9 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="/Mardi Gras End Project/css/main.css">
-  <link rel="stylesheet" href="/Mardi Gras End Project/css/home.css">
-  <link rel="icon" type="image/x-icon" href="/Mardi Gras End Project/images/Logo.png">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/home.css">
+  <link rel="icon" type="image/x-icon" href="../images/main_Images/Logo.png">
   <style>
 
   </style>
@@ -31,12 +31,12 @@
         </div>
         <div class="main_Logo">
           <div class="row logo-height">
-            <img src="/Mardi Gras End Project/images/Logo.png" alt="Logo">
+            <img src="../images/main_Images/Logo.png" alt="Logo">
           </div>
           <h1>Mardi Gras</h1>
         </div>
         <a href="https://www.nola.com/news/coronavirus/" target="_Blank">
-          <img src="/Mardi Gras End Project/images/Covid-19.png" alt="covid_19" class="img-fluid">
+          <img src="../images/main_Images/Covid-19.png" alt="covid_19" class="img-fluid">
         </a>
       </div>
       <div class="row">
@@ -50,22 +50,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/Mardi Gras End Project/html/index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/html/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/about.html">About</a>
+                  <a class="nav-link" href="/html/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/media.html">Media</a>
+                  <a class="nav-link" href="/html/media.html">Media</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/faq.html">FAQ</a>
+                  <a class="nav-link" href="/html/faq.html">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/contact.html">Contact</a>
+                  <a class="nav-link" href="/html/contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/quiz.html">HTML CSS Quiz</a>
+                  <a class="nav-link" href="/html/quiz.html">HTML CSS Quiz</a>
                 </li>
               </ul>
               </ul>
@@ -83,7 +83,7 @@
       <div class="row crousel_timer">
         <p id="demo"></p>
         <div class="phone_Image">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="img-fluid" alt="phone">
+          <img src="/images/index_page/mardi_Gras.jpg" class="img-fluid" alt="phone">
         </div>
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -100,35 +100,35 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="d-block w-100" alt="...">
+              <img src="../images/index_page/mardi_Gras.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Mardi Gras Festival</h3>
                 <p>Some representative placeholder content for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="d-block w-100" alt="...">
+              <img src="../images/index_page/Masks.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Mardi Gras Festival</h3>
                 <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="d-block w-100" alt="...">
+              <img src="../images/index_page/party.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Third slide label</h3>
                 <p>Some representative placeholder content for the third slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="d-block w-100" alt="...">
+              <img src="../images/index_page/chiar.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Third slide label</h3>
                 <p>Some representative placeholder content for the third slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="d-block w-100" alt="...">
+              <img src="../images/index_page/dounat.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Third slide label</h3>
                 <p>Some representative placeholder content for the third slide.</p>
@@ -152,7 +152,7 @@
         <h2>Sponsors</h2>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="/Mardi Gras End Project/images/parking.png" class="card-img-top" alt="...">
+            <img src="../images/index_page/parking.png" class="card-img-top" alt="parking404">
             <div class="card-body">
               <a href="#popup1" class="btn btn-primary">Learn More</a>
             </div>
@@ -175,7 +175,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="/Mardi Gras End Project/images/hotel.png" class="card-img-top" alt="...">
+            <img src="../images/index_page/hotel.png" class="card-img-top" alt="Sharton Hotel">
             <div class="card-body">
               <a href="#popup2" class="btn btn-primary">Learn More</a>
             </div>
@@ -201,7 +201,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="/Mardi Gras End Project/images/aceHotel.svg" class="card-img-top" alt="...">
+            <img src="../images/index_page/aceHotel.svg" class="card-img-top" alt="Ace Hotel">
             <div class="card-body">
               <a href="#popup3" class="btn btn-primary">Learn More</a>
             </div>
@@ -223,7 +223,8 @@
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="/Mardi Gras End Project/images/ritz-carlton-primary-black.png" class="card-img-top" alt="...">
+            <img src="../images/index_page/ritz-carlton-primary-black.png" class="card-img-top"
+              alt="Ritz-Carlton Hotel">
             <div class="card-body">
               <a id="4" href="#popup4" class="btn btn-primary">Learn More</a>
             </div>
@@ -249,7 +250,7 @@
       <div class="row sponsors">
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="/Mardi Gras End Project/images/better_Lcm.jpeg" class="card-img-top" alt="...">
+            <img src="../images/index_page/better_Lcm.jpeg" class="card-img-top" alt="better_Lcm">
             <div class="card-body">
               <a id="5" href="#popup5" class="btn btn-primary">Learn More</a>
             </div>
@@ -271,7 +272,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="/Mardi Gras End Project/images/mod.jpg" class="card-img-top" alt="...">
+            <img src="../images/index_page/mod.jpg" class="card-img-top" alt="museum of death">
             <div class="card-body">
               <a id="6" href="#popup6" class="btn btn-primary">Learn More</a>
             </div>
@@ -295,7 +296,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="/Mardi Gras End Project/images/walkons.svg" class="card-img-top" alt="...">
+            <img src="../images/index_page/walkons.svg" class="card-img-top" alt="walk ons">
             <div class="card-body">
               <a id="7" href="#popup7" class="btn btn-primary">Learn More</a>
             </div>
@@ -317,7 +318,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="/Mardi Gras End Project/images/hunted_Museum.jpg" class="card-img-top" alt="...">
+            <img src="../images/index_page/hunted_Museum.jpg" class="card-img-top" alt="hunted museum">
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text"></p>
@@ -385,7 +386,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
-  <script src="/Mardi Gras End Project/js/index.js"></script>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
