--- a/Mardi Gras End Project/html/media.html
+++ b/Mardi Gras End Project/html/media.html
@@ -9,9 +9,9 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="/Mardi Gras End Project/css/main.css">
-  <link rel="stylesheet" href="/Mardi Gras End Project/css/media.css">
-  <link rel="icon" type="image/x-icon" href="/Mardi Gras End Project/images/Logo.png">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/media.css">
+  <link rel="icon" type="image/x-icon" href="/images/main_Images/Logo.png">
   <title>Mardi Gras 2022</title>
 </head>
 
@@ -28,12 +28,12 @@
         </div>
         <div class="main_Logo">
           <div class="row logo-height">
-            <img src="/Mardi Gras End Project/images/Logo.png" alt="Logo">
+            <img src="/images/main_Images/Logo.png" alt="Logo">
           </div>
           <h1>Mardi Gras</h1>
         </div>
         <a href="https://www.nola.com/news/coronavirus/" target="_Blank">
-          <img src="/Mardi Gras End Project/images/Covid-19.png" alt="covid_19" class="img-fluid">
+          <img src="/images/main_Images/Covid-19.png" alt="covid_19" class="img-fluid">
         </a>
       </div>
       <div class="row">
@@ -47,22 +47,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/Mardi Gras End Project/html/index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/html/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/about.html">About</a>
+                  <a class="nav-link" href="/html/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/media.html">Media</a>
+                  <a class="nav-link" href="/html/media.html">Media</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/faq.html">FAQ</a>
+                  <a class="nav-link" href="/html/faq.html">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/contact.html">Contact</a>
+                  <a class="nav-link" href="/html/contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Mardi Gras End Project/html/quiz.html">HTML CSS Quiz</a>
+                  <a class="nav-link" href="/html/quiz.html">HTML CSS Quiz</a>
                 </li>
               </ul>
               <form class="d-flex">
@@ -80,13 +80,13 @@
         <figure class="icon-cards mt-3">
           <div class="icon-cards__content">
             <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1"><img
-                  src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="img-fluid" alt=""></span>
+                  src="/images/media_page/dance.jpg" class="img-fluid" alt=""></span>
             </div>
             <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1"><img
-                  src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="img-fluid" alt=""></span>
+                  src="/images/media_page/colors.jpg" class="img-fluid" alt=""></span>
             </div>
             <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1"><img
-                  src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="img-fluid" alt=""></span>
+                  src="/images/media_page/boat.jpg" class="img-fluid" alt=""></span>
             </div>
           </div>
         </figure>
@@ -100,24 +100,24 @@
       <div class="row" id="images">
         <h2>Images</h2>
         <div class="first_Img_Row">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/carnaval.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/chiar.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/dounat.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/gay.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/green.jpg" class="card-img-top img-fluid" alt="...">
         </div>
         <div class="second_Img_Row">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/mardi_Gras.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/mask.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/Masks.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/face_Mask.jpg" class="card-img-top img-fluid" alt="...">
         </div>
         <div class="third_Img_Row">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
-          <img src="/Mardi Gras End Project/images/pexels-photo-335692.jpeg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/parade.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/party.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/store.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/mask3.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/images/media_page/umbrella.jpg" class="card-img-top img-fluid" alt="...">
         </div>
       </div>
 
@@ -169,7 +169,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
-  <script src="/Mardi Gras End Project/js/media.js"></script>
+  <script src="/js/media.js"></script>
 </body>
 
 </html>
