--- a/Mardi Gras End Project/html/media.html
+++ b/Mardi Gras End Project/html/media.html
@@ -140,7 +140,7 @@
       </div>
       <div class="back_to_top">
 
-        <a href="#"><img src="/Mardi Gras End Project/images/toppng.com-arrow-up-black-up-arrow-323x700.png" alt=""></a>
+        <a href="#"><img src="/images/main_Images/toppng.com-arrow-up-black-up-arrow-323x700.png" alt=""></a>
       </div>
     </main>
 
