--- a/Mardi Gras End Project/html/faq.html
+++ b/Mardi Gras End Project/html/faq.html
@@ -229,8 +229,20 @@
 
               <div class="accordion__content">
                 <p>
-                  Rex, the King of Carnival, selected the Mardi Gras colors and assigned meaning to them in 1892. Purple
-                  stands for justice, green for faith, and gold for power.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis in inventore earum atque voluptatem,
+                  asperiores tempora ad voluptas nostrum quo quasi perspiciatis provident veniam cupiditate nam
+                  explicabo voluptate possimus animi ipsa blanditiis fugit molestias vitae! Adipisci dolores eius
+                  laborum pariatur iste dicta eveniet eaque consequuntur accusantium cum et unde quasi animi temporibus
+                  totam provident veniam, molestiae hic obcaecati iure autem cupiditate ullam dolor aliquam? Ratione,
+                  rerum distinctio tenetur et, sapiente impedit unde hic voluptate eaque velit alias! Non,
+                  exercitationem delectus.
+                  <br>
+
+                  You Find the Ester Egg Congratulations!
+                  &#129395;
+                  &#127881;
+                  <br>
+                  if you found me let the writer know :)
                 </p>
               </div>
             </div>
