--- a/Mardi Gras End Project/html/index.html
+++ b/Mardi Gras End Project/html/index.html
@@ -117,7 +117,7 @@
               <img src="../images/index_page/Masks.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Mardi Gras Festival</h3>
-                <p>SA beautiful Mardi Gras store with a lot of different masks</p>
+                <p>A beautiful Mardi Gras store with a lot of different masks</p>
               </div>
             </div>
             <div class="carousel-item">
